# swagger.yaml
@@ -405,19 +405,12 @@ paths:
         "500":
           $ref: "#/components/responses/InternalServerError"
 
-  /api/user/{uid}:
-    put: 
+  /api/user:
+    put:
       summary: Update user profile
       description: Updates the authenticated user's profile, excluding password and internal fields.
       tags:
         - User
-      parameters:
-        - name: uid
-          in: path
-          required: true
-          description: The ID of the user
-          schema:
-            type: string
       security:
         - bearerAuth: []
       requestBody:
@@ -445,13 +438,6 @@ paths:
       description: Deletes the authenticated user's profile.
       tags:
         - User
-      parameters:
-        - name: uid
-          in: path
-          required: true
-          description: The ID of the user
-          schema:
-            type: string
       security:
         - bearerAuth: []
       responses:
@@ -465,20 +451,8 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
-    
 
   /api/address:
-    get:
-      tags:
-        - Address
-      summary: Get all addresses
-      description: Returns all addresses from all users in DB
-      responses:
-        "200":
-          $ref: "#/components/responses/AllAddressFound"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-
     post:
       tags:
         - Address
@@ -514,6 +488,56 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/AddressFound"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    put:
+      tags:
+        - Address
+      summary: Update address by ID
+      description: Updates an address by ID
+      parameters:
+        - name: addressId
+          in: path
+          required: true
+          description: The ID of the address
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AddressAddInput"
+      responses:
+        "200":
+          $ref: "#/components/responses/AddressUpdated"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+
+    delete:
+      tags:
+        - Address
+      summary: Delete address by ID
+      description: Deletes an address by ID
+      parameters:
+        - name: addressId
+          in: path
+          required: true
+          description: The ID of the address
+          schema:
+            type: string
+      responses:
+        "200":
+          $ref: "#/components/responses/AddressDeleted"
         "400":
           $ref: "#/components/responses/BadRequest"
         "404":
@@ -716,7 +740,7 @@ components:
 
     UserProfileInput:
       type: object
-      required: [firstName, lastName, email, addresses, _id]
+      required: [_id]
       properties:
         _id:
           type: string
@@ -741,6 +765,10 @@ components:
             type: string
             example: 64f1a2cfe2a83c0012345680
           description: ObjectId referencing an address
+
+    AddressAddInput:
+      allOf:
+        - $ref: "#/components/schemas/Address"
 
     # 📤 "Outputs" = useful responses for the client
     ProductOutput:
@@ -789,9 +817,7 @@ components:
           type: array
           maxItems: 5
           items:
-            type: string
-            example: 64f1a2cfe2a83c0012345680
-          description: ObjectId referencing an address
+            $ref: "#/components/schemas/AddressOutput"
 
     UserInternalOutput:
       type: object
@@ -826,6 +852,7 @@ components:
           format: date-time
           example: "2024-01-01T00:00:00.000Z"
 
+    # TODO: is user necessary in addressOutput?
     AddressOutput:
       allOf:
         - $ref: "#/components/schemas/Address"
@@ -836,11 +863,6 @@ components:
               type: string
               example: "64f1a2cfe2a83c0012345680"
               description: ObjectId of the address
-
-    AllAddressOutput:
-      type: array
-      items:
-        $ref: "#/components/schemas/AddressOutput"
 
     # 📡 Structured responses (standardized)
     BaseResponse:
@@ -919,15 +941,6 @@ components:
           properties:
             payload:
               $ref: "#/components/schemas/LoginPayload"
-
-    AllAddressResponse:
-      allOf:
-        - $ref: "#/components/schemas/BaseResponse"
-        - type: object
-          required: [payload]
-          properties:
-            payload:
-              $ref: "#/components/schemas/AllAddressOutput"
 
     AddressResponse:
       allOf:
@@ -1153,13 +1166,6 @@ components:
             $ref: "#/components/schemas/DeleteResponse"
 
     # - Address responses
-    AllAddressFound:
-      description: Address found
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/AllAddressResponse"
-
     AddressFound:
       description: Address found
       content:
@@ -1173,3 +1179,17 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/AddressResponse"
+
+    AddressUpdated:
+      description: Address successfully updated
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/AddressResponse"
+
+    AddressDeleted:
+      description: Address successfully deleted
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/DeleteResponse"
